<resources>
    <string name="app_name">اوتجي</string>
    <string name="otchy">اوتجي</string>
    <string name="kisaba">قصابة</string>
    <string name="soon">قريبا</string>
    <string name="home">الرئيسية</string>
    <string name="item_home_icon_desc">ايقونة لتوضيح الخدمة</string>
    <string name="shopping_cart">سلة المشتريات</string>
    <string name="on_location_clean">تنظيف موقعي</string>
    <string name="laundry_ironing">غسيل وكوي</string>
    <string name="ironing">كوي</string>
    <string name="laundry">غسيل</string>
    <string name="select_quantity">تحديد الكمية</string>
    <string name="add_order_btn_desc">زر اضافة طلب</string>
    <string name="remove_order_btn_desc">زر حذف طلب</string>
    <string name="add_to_cart">اضافة الى السلة</string>
    <string name="order_all">طلب الكل</string>
    <string name="pieces_count">عدد القطع</string>
    <string name="total_price">السعر الكلي</string>
    <string name="order">طلب</string>
    <string name="delete">حذف</string>
    <string name="receive_date_time">تاريخ و وقت القدوم</string>
    <string name="receive_date_time1">تاريخ و وقت التسليم</string>
    <string name="send_date_time">تاريخ و وقت التسليم</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="order_description">وصف الطلب (اختياري)</string>
    <string name="login">تسجيل دخول</string>
    <string name="password">كلمة السر</string>
    <string name="apartment">الشقة</string>
    <string name="building">العمارة</string>
    <string name="register_as_user">تسجيل كمستخدم</string>
    <string name="categories">الاقسام</string>
    <string name="pieces">قطع</string>
    <string name="thousand">الف</string>
    <string name="connection_error">خطأ في الاتصال!</string>
    <string name="data_entry_error">خطأ في المعلومات!</string>
    <string name="no_services">لا يوجد خدمات</string>
    <string name="no_empty_field_allowed">لا يجب ترك حقل فارغ!</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="no_item">لا يوجد عناصر!</string>
    <string name="empty_sopping_cart">سلة المشتريات فارغة!</string>
    <string name="app_logo">شعار التطبيق</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="bg_trans">background_transition</string>
    <string name="logo_trans">logo_transition</string>
    <string name="phone_number_range_error">يجب ان يتكون الهاتف من 10 او 11 رقماً</string>
    <string name="no_desc">لايوجد وصف</string>
    <string name="service_meat_desc">صورة تمثل نوع الغرض في قسم الكصابة</string>
    <string name="cow_meat">لحم عجل</string>
    <string name="sheep_meat">لحم غنم</string>
    <string name="checkin_kebab">كباب دجاج</string>
    <string name="meat_kebab">كباب لحم</string>
    <string name="account_expire">انتهت صلاحية الحساب، يرجى التسجيل من جديد</string>
    <string name="quarter_kilo">ربع</string>
    <string name="half_kilo">نصف</string>
    <string name="kilo">كيلو</string>
    <string name="q_kilo">ربع كيلو</string>
    <string name="three_quarters_kilo">ثلاث ارباع</string>
    <string name="register">تسجيل حساب</string>
    <string name="name">اسم المستخدم</string>
    <string name="gov">المحافظة</string>
    <string name="city">المنطقة</string>
    <string name="invalidPhone">رقم الهاتف غير صالح</string>
    <string name="enterUsername">يرجى ادخال اسم المستخدم</string>
    <string name="selectGov">يرجى اختيار المحافظة</string>
    <string name="enterCity">يرجى ادخال اسم المنطقة</string>
    <string name="enterPass">يرجى ادخال كلمة المرور</string>
    <string name="mustPassMoreSix">يجب ان تكون كلمة المرور 6 حروف او اكثر</string>
    <string name="enterPhone">يجب ادخال رقم الهاتف</string>
    <string name="verifyAccount">تأكيد الحساب</string>
    <string name="verify">تأكيد</string>
    <string name="enterVerifyCode">ادخل رمز التأكيد</string>
    <string name="userIsExist">هذا المستخدم مسجل مسبقاً</string>
    <string name="connectionError">خطأ في الاتصال</string>
    <string name="mustEnter">لا يمكن ترك الحقل فارغ</string>
    <string name="mustSixDigits">يجب ان يكون الرمز 6 ارقام</string>
    <string name="dontHaveAccount">ليس لديك حساب ؟</string>
    <string name="haveAccount">لديك حساب؟</string>
    <string name="filter">اختيار محافظة</string>
    <string name="searchCity">منطقة</string>
    <string name="invalidLoginData">خطأ في اسم المستخدم وكلمة المرور</string>
    <string name="userIsNotExist">هذا المستخدم غير موجود</string>
    <string name="noVendors">لا توجد محلات في هذه المحافظة</string>
    <string name="noServoces">لا توجد خدمات لهذا المحل</string>
    <string name="noCategories">لا توجد تصنيفات لهذا المحل</string>
    <string name="services">الخدمات</string>
    <string name="order_sent">تم الطلب بنجاح</string>
    <string name="after_date">يجب ان يكون تاريخ التسليم قبل تاريخ الاستلام</string>
    <string name="noVendorItem">لا توجد طلبات في السلة</string>
    <string name="cant_set_old_date">لا يمكن اختيار تاريخ قديم</string>
</resources>
