<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:id="@+id/layout"
        android:transitionName="@string/bg_trans"
        android:background="@drawable/bg_login_turquoise_gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.SplashScreenActivity">

        <ImageView
            android:transitionName="@string/logo_trans"
            android:id="@+id/logoImageView"
            android:layout_width="220dp"
            android:layout_height="220dp"
            tools:src="@drawable/logo_with_name"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo" />


    </FrameLayout>
</layout>