<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="serviceItem"
            type="com.srit.otachy.database.models.ServiceModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_quantity"
            android:textSize="@dimen/toolbar_tile_size"
            android:padding="12dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/bahij_the_sans_arabic_extra_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@{serviceItem.item.name}"
            tools:text="قميص"
            android:fontFamily="@font/bahij_the_sans_arabic_extra_bold"/>

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_margin="18dp" />


        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/bahij_the_sans_arabic_extra_bold"
            android:priceTxt="@{serviceItem.price}"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            tools:text="1 الاف" />

        <LinearLayout
            android:id="@+id/numberPickerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/decreaseBtn"
                android:elevation="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/ic_remove_white_24dp"
                android:background="@drawable/bg_circle_primary"
                android:contentDescription="@string/remove_order_btn_desc" />


            <TextView

                android:id="@+id/numOfItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="1"
                android:layout_marginStart="18dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginEnd="18dp"
                android:fontFamily="@font/bahij_the_sans_arabic_extra_bold"
                />

            <ImageView
                android:id="@+id/increaseBtn"
                android:elevation="@dimen/small_icon_elevation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_white_24dp"
                android:padding="4dp"
                android:background="@drawable/bg_circle_primary"
                android:contentDescription="@string/add_order_btn_desc" />
        </LinearLayout>

        <Button
            android:id="@+id/addBtn"
            android:elevation="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:paddingStart="58dp"
            android:paddingEnd="58dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/bahij_the_sans_arabic_extra_bold"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_btn_red_radient" />

    </LinearLayout>
</layout>